  * genext2fs: a tool to generate an ext2 filesystem as a normal (non-root) user
  * mke2img: a script taken from the Buildroot project making it possible to create
             an ext2 filesystem image as a normal (non-root) user
  * squashfs-tools-4.3: a special version of squashfs-tools modified to support AVM-BE format

- New patches (read online help for more info):

- New packages, libs, modules:
    * asterisk 11.25.3
    * asterisk-chan-capi post-1.1.6 with asterisk11 adjustments by Mihai Moldovan
    * asterisk-chan-dongle 1.1-git (asterisk11 branch)
    * asterisk-chan-sccp 4.1.0RC1
    * asterisk-gui 2.1.0RC1
    * atop 2.2.3
    * autossh 1.4e
    * avm-forwarding 0.0.1
    * axTLS wrapper 1.4.9
    * bvi 1.4.0
    * cntlm 0.93beta5
    * decrypt FRITZ!OS configs v0.2 (renamed version of PeterPawn's script decode_passwords)
    * ISC dhcp 4.3.3-P1
    * E-MailRelay 1.9
    * gptfdisk 1.0.1
    * iksemel 1.5-git
    * iperf 3.3
    * jansson 2.7
    * libavmacl2 (taken from AVM's 7490.06.30 open-source package)
    * libcap 2.24
    * libgsm-1.0.13
    * libnettle 3.3
    * liblz4 1.7.5
    * libsrtp-1.4.4+20100615
    * libusb-compat 0.1.5
    * lzma1 4.65
    * mbed TLS 2.6.0
    * nzbget 14.1
    * PJProject 2.2.1
    * Fritz!Box private key password framework v0.6 (by PeterPawn)
    * python-cheetah 2.4.4
    * python-mechanize 0.2.5
    * python-yEnc 0.4.0
    * serf 1.3.9
    * ScanButton 0.2.3.cvs20090713
    * speex 1.2rc1
    * spandsp 0.0.6pre21
    * squashfs-tools 3.4
    * squashfs-tools 4.3 (modified to support AVM-BE format)
    * xz 5.2.3

- Updated tools and hooks:

- Updated patches:

- Updated packages and libs:
    * apache 2.4.29
    * apr 1.6.3
    * apr-util 1.6.1
    * bash 3.2.57
    * bind 9.10.3-P4
    * bip 0.8.9
    * bird 1.4.0
    * CCID 1.4.18
    * cifs-utils 6.6
    * cryptsetup 1.7.0
    * curl 7.56.1
    * davfs2 1.5.2
    * dbus 1.8.20
    * dnsmasq 2.78
    * dosfstools 3.0.28
    * dropbear 2016.75