@@ -31,6 +31,7 @@ Latest changes:
   * mke2img: a script taken from the Buildroot project making it possible to create
              an ext2 filesystem image as a normal (non-root) user
   * squashfs-tools-4.3: a special version of squashfs-tools modified to support AVM-BE format
+  * bzimage2eva / eva2bzimage: conversion tools for PUMA6 kernels
 
 - New patches (read online help for more info):
 
